// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BhAvatar.vue renders correctly 1`] = `
<div><button class="bh-avatar">
    <div class="bh-avatar__content"><img src="https://robohash.org/bothub"></div>
  </button></div>
`;

exports[`BhAvatar.vue when size string is not blank renders correctly 1`] = `
<div><button class="bh-avatar bh-avatar--small">
    <div class="bh-avatar__content"><img src="https://robohash.org/bothub"></div>
  </button></div>
`;
